ui alignment fix

--- a/scss/common/_grid.scss
+++ b/scss/common/_grid.scss
@@ -145,10 +145,18 @@
   justify-content: center;
 }
 
+.justify-content-start {
+  justify-content: start;
+}
+
 .justify-items-center {
   justify-items: center;
 }
 
 .align-content-start {
   align-content: start;
+}
+
+.align-items-center {
+    align-items: center;
 }
