--- a/scss/common/_helper.scss
+++ b/scss/common/_helper.scss
@@ -220,8 +220,8 @@ h3 {
 	border: 0;
 	opacity: 0.5;
 	transition: opacity 0.15s ease;
-	width: 50px;
-	height: 50px;
+	width: 40px;
+	height: 40px;
 	background: var(--primary);
 	border-radius: 50px;
 	transform: translateY(-50%);
@@ -254,8 +254,8 @@ h3 {
   .carousel-control-prev-icon,
   .carousel-control-next-icon {
 	display: inline-block;
-	width: 1.5rem;
-	height: 1.5rem;
+	width: 1rem;
+	height: 1rem;
 	background-repeat: no-repeat;
 	background-position: 50%;
 	background-size: 100% 100%;
@@ -297,8 +297,6 @@ h3 {
 	background-color: #fff;
 	background-clip: padding-box;
 	border: 0;
-	border-top: 10px solid transparent;
-	border-bottom: 10px solid transparent;
 	opacity: 0.5;
 	transition: opacity 0.6s ease;
   }
@@ -359,7 +357,7 @@ h3 {
 	--bs-accordion-active-color: #FEFAE1;
 	--bs-accordion-active-bg: #423D31;
   }
-  
+
   .accordion-button {
 	position: relative;
 	display: flex;
