--- a/scss/style.css
+++ b/scss/style.css
@@ -210,12 +210,20 @@ p, h1, h2, h3, h4, h5, h6 {
   justify-content: center;
 }
 
+.justify-content-start {
+  justify-content: start;
+}
+
 .justify-items-center {
   justify-items: center;
 }
 
 .align-content-start {
   align-content: start;
+}
+
+.align-items-center {
+  align-items: center;
 }
 
 body {
@@ -496,8 +504,8 @@ h3 {
   border: 0;
   opacity: 0.5;
   transition: opacity 0.15s ease;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   background: var(--primary);
   border-radius: 50px;
   transform: translateY(-50%);
@@ -531,8 +539,8 @@ h3 {
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
   display: inline-block;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1rem;
+  height: 1rem;
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: 100% 100%;
@@ -575,8 +583,6 @@ h3 {
   background-color: #fff;
   background-clip: padding-box;
   border: 0;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
   opacity: 0.5;
   transition: opacity 0.6s ease;
 }
@@ -1079,6 +1085,10 @@ h3 {
 }
 .video-section-content h2 {
   color: var(--primary);
+  padding: var(--xl-padding);
+  max-width: 950px;
+  width: 100%;
+  margin: auto;
 }
 
 .section-4 {
@@ -1093,6 +1103,7 @@ h3 {
   color: var(--primary);
   display: grid;
   align-items: center;
+  padding: 56px;
 }
 
 .carousel-text {
@@ -1144,7 +1155,7 @@ h3 {
   display: grid;
   grid-template-columns: 1fr auto auto auto;
   gap: 24px;
-  align-items: start;
+  align-items: center;
 }
 
 .f-logo {
@@ -1216,9 +1227,37 @@ h3 {
   .carousel-layout {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 300px 400px;
+    grid-template-rows: 300px 350px;
+  }
+  .section-4 {
+    min-height: inherit;
+  }
+  .carousel-content {
+    padding: 24px;
+  }
+  .section-5 {
+    height: 400px;
+  }
+  .bb-1 {
+    font-size: clamp(6rem, -11.313rem + 45.8015vw, 16rem);
+    line-height: 100%;
+  }
+  .bb-2 {
+    font-size: clamp(2.5rem, -2.3654rem + 10.7692vw, 6.25rem);
+    line-height: 125%;
   }
 }
+.heading-w-900 {
+  max-width: 900px;
+  width: 100%;
+}
+
+.heading-w-600 {
+  max-width: 600px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 /* ******************************
 RIPPLES EFFECT
 ****************************** */
